# ShiFT

./: .gitignore  .gitlab-ci.yml  .gitsubprojects  CMakeLists.txt  Changelog.md  README.md
CMake/: shift_generate_cxx.cmake
shift/: CMakeLists.txt  Entities.cpp  Entities.h  EntitiesTypes.h  Entity.cpp  Entity.h  Object.cpp  Object.h  Properties.h  Relationship.cpp  Relationship.h  RelationshipProperties.cpp  RelationshipProperties.h  RelationshipPropertiesTypes.cpp  RelationshipPropertiesTypes.h  Representation.cpp  Representation.h  RepresentationCreator.h  View.h  ViewGraph.cpp  ViewGraph.h  definitions.h  error.h
